--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 /*==ClearFix==*/
 .clearfix {
     overflow: auto;
@@ -9,9 +14,6 @@
 }
 /*==Hearder CSS==*/
 .header {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
     max-height: 170px;
     height:170px;
     padding:50px 0;
@@ -56,6 +58,7 @@
     font-size:83px;
     color:#000000;
     text-align:center;
+    /*line-height:936px;*/
     vertical-align: middle;
     display:table-cell;
 }
@@ -63,51 +66,34 @@
     color:#f66c27;
 }
 /*==Main Content==*/
+.main-content {
+    width:100%;
+}
 /*==Content-1==*/
     /*==Content-1-picture==*/
     .main-content .content-1 {
-        height:770px;
-        width:auto;
+        width:100%;
         padding-top:75px;
         padding-left:50px;
-
     }
     .main-content .content-1-pic {
-        box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        -webkit-box-sizing: border-box;
-        width:50%;
-        float:left;
     }
     .content-1 .content-1-pic img.pic-1 {
-        width:640px;
-        height:470px;
+        width:90%;
         border: 5px solid white;
         box-shadow: 20px 20px 10px #e9e9e9;
     }
     .content-1 .content-1-pic img.pic-2 {
-        width:295px;
-        height:211px;
-        margin-top:-150px;
-        margin-left:360px;
+        width:50%;
+        margin-top:-140px;
+        margin-left:266px;
         border: 5px solid white;
         box-shadow: 20px 20px 10px #e9e9e9;
     }
     .main-content .content-1-text {
-        box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        -webkit-box-sizing: border-box;
-        float:right;
-        width:50%;
-    }
-    .clear {
-        content: '';
-        clear:both;
     }
     /*==Content-1-text==*/
     .content-1-text {
-        padding:50px 100px;
-
     }
     .content-1-text h2 {
         color:#222222;
@@ -149,168 +135,82 @@
         font-size:18px;
     }
 /*==Content-2==*/
+    .content-2 {
+        width:100%;
+        margin-top:80px;
+        margi-bottom:50px;
+    }
     .content-2  h2 {
         line-height:100px;
         color:#000000;
         margin-left:50px;
         font-size: 45px;
     }
-    /*==Content-2-first==*/
-    .content-2 .content-2-first {
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-        margin-bottom:100px;
-        margin-left:0px;
-        float:left;
+    /*==Content-2-sub==*/
+    .content-2 .content-2-sub {
     }
-    .content-2 .content-2-first .icon i {
+    .content-2 .content-2-sub .icon {
         width:60px;
         height:60px;
+        margin:30px auto;
+    }
+    .content-2 .content-2-sub .icon i {
         text-align:center;
         line-height:60px;
-        font-size: 50px;
+        font-size: 60px;
         color:#404040;
-        margin-left:45%;
-        margin-top:100px;
     }
-    .content-2 .content-2-first h4 {
+    .content-2 .content-2-sub h4 {
         text-align:center;
-        margin-top:30px;
         color:#333333;
         font-size: 25px;
     }
-    .content-2 .content-2-first p {
-        text-align:center;
+    .content-2 .content-2-sub p {
+        margin:0 auto;
+        text-align: center;
         width:280px;
-        margin-left:75px;
         color:#9b9b9b;
         margin-top:20px;
         padding:20px;
         font-size:15px;
 
     }
-    .content-2 .content-2-first:hover {
+    .content-2 .content-2-sub:hover {
         box-shadow: 20px 20px 10px #edebeb;
     }
-    .content-2 .content-2-first:hover .icon i {
+    .content-2 .content-2-sub:hover .icon i {
         color:#ff9c6a;
     }
-    /*==Content-2-second==*/
 
-    .content-2 .content-2-second {
-         -webkit-box-sizing: border-box;
-         -moz-box-sizing: border-box;
-         box-sizing: border-box;
-         margin-bottom:100px;
-         margin-left:0px;
-         float:left;
-     }
-    .content-2 .content-2-second .icon i {
-        width:60px;
-        height:60px;
-        text-align:center;
-        line-height:60px;
-        font-size: 50px;
-        color:#404040;
-        margin-left:45%;
-        margin-top:100px;
-    }
-    .content-2 .content-2-second h4 {
-        text-align:center;
-        margin-top:30px;
-        color:#333333;
-        font-size: 25px;
-    }
-    .content-2 .content-2-second p {
-        text-align:center;
-        width:280px;
-        margin-left:75px;
-        color:#9b9b9b;
-        margin-top:20px;
-        padding:20px;
-        font-size:15px;
-
-    }
-    .content-2 .content-2-second:hover {
-        box-shadow: 20px 20px 10px #edebeb;
-    }
-    .content-2 .content-2-second:hover .icon i {
-     color:#ff9c6a;
-    }
-    /*==Content-2-third==*/
-    .content-2 .content-2-third {
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-        margin-bottom:100px;
-        margin-left:0px;
-        float:right;
-    }
-    .content-2 .content-2-third .icon i {
-        width:60px;
-        height:60px;
-        text-align:center;
-        line-height:60px;
-        font-size: 50px;
-        color:#404040;
-        margin-left:45%;
-        margin-top:100px;
-    }
-    .content-2 .content-2-third h4 {
-        text-align:center;
-        margin-top:30px;
-        color:#333333;
-        font-size: 25px;
-    }
-    .content-2 .content-2-third p {
-        text-align:center;
-        width:280px;
-        margin-left:75px;
-        color:#9b9b9b;
-        margin-top:20px;
-        padding:20px;
-        font-size: 15px;
-
-    }
-    .content-2 .content-2-third:hover {
-        box-shadow: 20px 20px 10px #edebeb;
-    }
-    .content-2 .content-2-third:hover .icon i {
-        color:#ff9c6a;
-}
-    .content-2 .clear {
-        content:'';
-        clear:both;
-    }
     /*==Content-3==*/
+    .content-3 {
+        width:100%;
+        padding-top:20px;
+    }
     .content-3 h1 {
         text-align:center;
         font-size: 45px;
         color:#000000;
     }
-    .content-3 > p {
+    .content-3  p {
+        margin: 10px auto;
         font-size:15px;
         color:#bdbdbd;
         text-align:center;
         margin:50px auto;
-        width:850px;
+        width:80%;
         text-indent: 5px;
     }
-    .content-3 > img {
+    .content-3  img {
         width:100%;
-        height:650px;
     }
     /*==Content-4==*/
     .content-4 {
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
         width:100%;
         height:360px;
         background: linear-gradient(to right,#ff7b38,#f9915c);
     }
-    .content-4 > h4 {
+    .content-4  h4 {
         text-align: center;
         font-size:30px;
         color:#ffffff;
@@ -357,16 +257,13 @@
     }
     /*==Content-5==*/
     .content-5 {
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
         background:#f8f8f8;
         width:100%;
-        height:600px;
-        margin-top:20px;
+        margin-top:0px;
+        padding-bottom:80px;
     }
     .content-5 h4 {
-        padding:100px;
+        padding:40px 0 20px 0;
         color:#010101;
         font-size:45px;
         text-align:center;
@@ -374,10 +271,10 @@
     .content-5 img {
         width:75px;
         height:75px;
-        margin-left:650px;
-        margin-top:-70px;
+        display:block;
+        margin:0 auto;
     }
-    .content-5 > p {
+    .content-5  p {
         width:820px;
         text-indent:10px;
         margin:0 auto;
@@ -397,8 +294,77 @@
         color:#888888;
         font-size:15px;
     }
+
+    /*==Content-6==*/
+    .content-6  {
+        width:100%;
+        margin-top:80px;
+    }
+    /*==First-col==*/
+    .content-6 .first-col {
+        height:670px;
+    }
+    .content-6 .first-col h4 {
+        font-size:45px;
+        color:#000000;
+    }
+    .content-6 .first-col > div {
+        font-size:15px;
+    }
+    .content-6 .first-col > div > p:first-of-type {
+        color:#f58b59;
+        margin-top:40px;
+    }
+    .content-6 .first-col > div > p:last-of-type {
+        color:#adadad;
+    }
+    .content-6 .first-col > button {
+        display:block;
+        width:180px;
+        height:55px;
+        border-radius: 30px;
+        color:#ffffff;
+        background:#f48146;
+        text-align:center;
+        outline:none;
+        border:none;
+        margin-top:40px;
+        margin-bottom:70px;
+    }
+    .content-6 .first-col > img {
+        border:5px solid white;
+        box-shadow: 20px 20px 10px #f9f9f9;
+        width:100%;
+    }
+    /*==Second-col==*/
+    .content-6 .second-col {
+    }
+    .content-6 .second-col img {
+        width:100%;
+        height:96%;
+        border:5px solid white;
+        box-shadow: 20px 20px 10px #f9f9f9;
+    }
+    /*==Third-col==*/
+    .content-6 .third-col {
+
+    }
+    .content-6 .third-col img:first-of-type {
+        border:5px solid white;
+        box-shadow: 20px 20px 10px #f9f9f9;
+        width:100%;
+        height:45%;
+    }
+    .content-6 .third-col img:last-of-type {
+        border:5px solid white;
+        box-shadow: 20px 20px 10px #f9f9f9;
+        margin-top:12%;
+        width:100%;
+        height:45%;
+    }
 /*==Footer CSS==*/
 .footer {
+    margin-top:80px;
     background: linear-gradient(to right, #f66c27 50%, #ffffff 50%);
 }
 .footer .contact-form {
